Bug 401343 - Search field turns red for a very short period of time upon searching
Summary: Search field turns red for a very short period of time upon searching
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-23 17:11 UTC by Alexander Mentyu
Modified: 2018-12-24 14:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-11-23 17:11:21 UTC
STEPS TO REPRODUCE
1. Start Falkon.
2. Open web page - for example - https://bugs.kde.org/describecomponents.cgi
3. Press Ctrl+F.
4. Type 'plasmashell' - text that is present on the page in the search field.
5. Watch the search field.

OBSERVED RESULT
Search field turns red for a very short period of time even if searchable text is present on page

EXPECTED RESULT
Search field stays in normal theme color upon searching when the searchable text is present on page

SOFTWARE/OS VERSIONS
falkon 3.0.99
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-39-generic
Comment 1 David Rosca 2018-12-24 14:20:06 UTC
Git commit 51eb65ecec766d4895d49aefe2b76069f20d2f9f by David Rosca.
Committed on 24/12/2018 at 13:05.
Pushed by drosca into branch 'master'.

SearchToolBar: Ignore old search callbacks
FIXED-IN: 3.1.0

M  +4    -0    src/lib/webtab/searchtoolbar.cpp
M  +1    -0    src/lib/webtab/searchtoolbar.h

https://commits.kde.org/falkon/51eb65ecec766d4895d49aefe2b76069f20d2f9f