SearchToolBar: Ignore old search callbacks

BUG: 401343
FIXED-IN: 3.1.0